[package]
name = "reflow"
version = "0.2.0"
authors = ["ko1N <ko1N1337@gmail.com>", "Aurimas Blažulionis <0x60@pm.me>"]
edition = "2018"

[dependencies]
memflow = { version = "0.2", features = ["plugins"] }
log = "0.4"
unicorn-engine = "2.0"
capstone = "0.11"

[dev-dependencies]
simplelog = "0.12"
clap = { version = "4.4", features = ["cargo"] }

[[example]]
name = "createinterface"
path = "examples/createinterface.rs"

[[example]]
name = "intresult"
path = "examples/intresult.rs"

[[example]]
name = "stringarg"
path = "examples/stringarg.rs"
