[package]
name = "reflow-cli"
version = "0.1.0"
authors = ["ko1N <ko1N1337@gmail.com>"]
edition = "2018"

[dependencies]
reflow = { path = "../reflow" }
memflow = { version = "0.1", features = ["inventory"] }
memflow-win32 = "0.1"
clap = "2.33"
log = { version = "0.4", default-features = false }
simple_logger = "1.0"
